# tonic-grpc-example

./: Cargo.toml  README.md  build.rs
proto/: hello_world.proto
src/: main.rs
