[package]
name = "tonic-grpc-example"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10.2"
prost = "0.12.3"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
mongodb = "2.7.1"

# Logging
log = "0.4"
env_logger = "0.10.1"

[build-dependencies]
tonic-build = "0.10.2"
